[gd_scene load_steps=18 format=3 uid="uid://bu6tvyvlcg8rw"]

[ext_resource type="Script" uid="uid://dca1b7u0rrydq" path="res://scenes/collectable/secret_triangle_collected.gd" id="1_pswof"]
[ext_resource type="Texture2D" uid="uid://cvtvi38wuw6vt" path="res://sprites/collectable/secrettri/SecretTriangle_LightRays.png" id="2_m8qy8"]
[ext_resource type="Texture2D" uid="uid://ckvi488144mor" path="res://sprites/collectable/secrettri/SecretTriangle0001.png" id="3_jb2ri"]
[ext_resource type="Texture2D" uid="uid://bsos2g03qgcea" path="res://sprites/collectable/secrettri/SecretTriangle0002.png" id="4_g36vy"]
[ext_resource type="Texture2D" uid="uid://csw5h3fdwwaxw" path="res://sprites/collectable/secrettri/SecretTriangle0003.png" id="5_4hxjx"]
[ext_resource type="AudioStream" uid="uid://coq5dk5wwvxpq" path="res://sfx/gameplay/collectables/sfx_trianglegot.ogg" id="6_hat45"]

[sub_resource type="SpriteFrames" id="SpriteFrames_dh666"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_jb2ri")
}, {
"duration": 1.0,
"texture": ExtResource("4_g36vy")
}, {
"duration": 1.0,
"texture": ExtResource("5_4hxjx")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2v80s"]
size = Vector2(46, 38)

[sub_resource type="Animation" id="Animation_5dpqe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TriangleRays:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_m1h37"]
resource_name = "spin"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TriangleRays:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 3.14159, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eebv3"]
_data = {
&"RESET": SubResource("Animation_5dpqe"),
&"spin": SubResource("Animation_m1h37")
}

[sub_resource type="Animation" id="Animation_qrcjl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TriangleRays:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_rm0i1"]
resource_name = "collect"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TriangleRays:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1.1, 1.5),
"transitions": PackedFloat32Array(0.15932, 1.7411, 0.329877, 4.59479),
"update": 0,
"values": [Vector2(1.4, 1.4), Vector2(1, 1), Vector2(1, 1), Vector2(0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"anim_end"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f6s3d"]
_data = {
&"RESET": SubResource("Animation_qrcjl"),
&"collect": SubResource("Animation_rm0i1")
}

[sub_resource type="Animation" id="Animation_x6hm4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Triangle:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Triangle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_odbeg"]
resource_name = "collect"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Triangle:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5, 0.8),
"transitions": PackedFloat32Array(0.307786, 4.43828, 0.287175, 6.06286),
"update": 0,
"values": [Vector2(0.6, 0.6), Vector2(1, 1), Vector2(1, 1), Vector2(1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Triangle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.533333, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iv6v8"]
_data = {
&"RESET": SubResource("Animation_x6hm4"),
&"collect": SubResource("Animation_odbeg")
}

[node name="SecretTriangle" type="Area2D"]
script = ExtResource("1_pswof")

[node name="TriangleRays" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_m8qy8")

[node name="Triangle" type="AnimatedSprite2D" parent="."]
self_modulate = Color(0.53999996, 0.89266676, 1, 0.54901963)
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_dh666")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.389584

[node name="TriangleShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_2v80s")

[node name="RayAnimSpin" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_eebv3")
}
autoplay = "spin"

[node name="RayAnimCollected" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_f6s3d")
}

[node name="TriangleCollected" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_iv6v8")
}

[node name="GotSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_hat45")
volume_db = -4.0
bus = &"sfx"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
